added icons, links to official websites

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -83,7 +83,7 @@
                                             <tr>
                                                 <th>Service</th>
                                                 <th>Description</th>
-                                                <th>Path</th>
+                                                <th>Local Path</th>
                                                 <th>Proxy of</th>
                                                 <th>Status</th>
                                             </tr>
@@ -92,8 +92,8 @@
                                                 <!-- this is where the USER services will be listed -->
                                             <tr>
                                                 <!-- O!MPD -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=http://ompd.pl"/>
-                                                    <a id="OMPD_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="OMPD_site" href="#"><img id="OMPD_icon" src=""/></a>
+                                                <a id="OMPD_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Player</td>
                                                 <td id="OMPD_path" >loading</td>
                                                 <td><a id="OMPD_proxy" href="#" >loading</a></td>
@@ -102,8 +102,8 @@
                                             <tr>
                                                 <!-- Ubooquity -->
                                             <tr>
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://vaemendis.net/ubooquity/"/>
-                                                    <a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Ubooquity_site" href="#"><img id="Ubooquity_icon" src=""/></a>
+                                                <a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Shelf</td>
                                                 <td id="Ubooquity_path" >loading</td>
                                                 <td><a id="Ubooquity_proxy" href="#" >loading</a></td>
@@ -111,8 +111,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- ownCloud -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://owncloud.com/"/>
-                                                    <a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="ownCloud_site" href="#"><img id="ownCloud_icon" src=""/></a>
+                                                <a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Cloud Storage</td>
                                                 <td id="ownCloud_path" >loading</td>
                                                 <td><a id="ownCloud_proxy" href="#" >loading</a></td>
@@ -120,8 +120,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://wordpress.org/"/>
-                                                    <a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Wordpress_site" href="#"><img id="Wordpress_icon" src=""/></a>
+                                                <a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Portfolio Site</td>
                                                 <td id="Wordpress_path" >loading</td>
                                                 <td><a id="Wordpress_proxy" href="#" >loading</a></td>
@@ -155,7 +155,7 @@
                                             <tr>
                                                 <th>Service</th>
                                                 <th>Description</th>
-                                                <th>Path</th>
+                                                <th>Local Path</th>
                                                 <th>Proxy of</th>
                                                 <th>Status</th>
                                             </tr>
@@ -164,8 +164,8 @@
                                                 <!-- this is where the ADMIN services will be listed -->
                                             <tr>
                                                 <!-- Dashboard -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://dietpi.com/"/>
-                                                    <a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Dashboard_site" href="#"><img id="Dashboard_icon" src=""/></a>
+                                                <a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Server Dashboard</td>
                                                 <td id="Dashboard_path" >loading</td>
                                                 <td><a id="Dashboard_proxy" href="#" >loading</a></td>
@@ -173,8 +173,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Pi-Hole -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=http://pi-hole.net/"/>
-                                                    <a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Pi-Hole_site" href="#"><img id="Pi-Hole_icon" src=""/></a>
+                                                <a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
                                                 <td>DNS Server</td>
                                                 <td id="Pi-Hole_path" >loading</td>
                                                 <td><a id="Pi-Hole_proxy" href="#" >loading</a></td>
@@ -182,8 +182,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Wordpress Admin -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://wordpress.org/"/>
-                                                    <a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Wordpress-Admin_site" href="#"><img id="Wordpress-Admin_icon" src=""/></a>
+                                                <a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Wordpress Admin</td>
                                                 <td id="Wordpress-Admin_path" >loading</td>
                                                 <td><a id="Wordpress-Admin_proxy" href="#" >loading</a></td>
@@ -191,8 +191,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity Admin -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://vaemendis.net/ubooquity/"/>
-                                                    <a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Ubooquity-Admin_site" href="#"><img id="Ubooquity-Admin_icon" src=""/></a>
+                                                <a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Books Library Admin</td>
                                                 <td id="Ubooquity-Admin_path" >loading</td>
                                                 <td><a id="Ubooquity-Admin_proxy" href="#" >loading</a></td>
@@ -200,8 +200,8 @@
                                             </tr>
                                             <!-- <tr>
                                                 Bitwarden
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://bitwarden.com/"/>
-                                                    <a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Bitwarden_site" href="#"><img id="Bitwarden_icon" src=""/></a>
+                                                <a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Password Manager</td>
                                                 <td id="Bitwarden_path" >loading</td>
                                                 <td><a id="Bitwarden_proxy" href="#" >loading</a></td>
@@ -209,8 +209,8 @@
                                             </tr> -->
                                             <tr>
                                                 <!-- Lidarr -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://lidarr.audio/"/>
-                                                    <a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Lidarr_site" href="#"><img id="Lidarr_icon" src=""/></a>
+                                                <a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Music Library</td>
                                                 <td id="Lidarr_path" >loading</td>
                                                 <td><a id="Lidarr_proxy" href="#" >loading</a></td>
@@ -218,8 +218,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Radarr -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://readarr.com/"/>
-                                                    <a id="Readarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Readarr_site" href="#"><img id="Readarr_icon" src=""/></a>
+                                                <a id="Readarr_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Library</td>
                                                 <td id="Readarr_path" >loading</td>
                                                 <td><a id="Readarr_proxy" href="#" >loading</a></td>
@@ -227,8 +227,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- Jackett -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://jackett.io/"/>
-                                                    <a id="Jackett_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="Jackett_site" href="#"><img id="Jackett_icon" src=""/></a>
+                                                <a id="Jackett_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Torrent Search Indexer</td>
                                                 <td id="Jackett_path" >loading</td>
                                                 <td><a id="Jackett_proxy" href="#" >loading</a></td>
@@ -236,8 +236,8 @@
                                             </tr>
                                             <tr>
                                                 <!-- phpMyAdmin -->
-                                                <td><img src="http://www.google.com/s2/favicons?domain=https://phpmyadmin.net/"/>
-                                                    <a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
+                                                <td><a id="phpMyAdmin_site" href="#"><img id="phpMyAdmin_icon" src=""/></a>
+                                                <a id="phpMyAdmin_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Database Admin</td>
                                                 <td id="phpMyAdmin_path" >loading</td>
                                                 <td><a id="phpMyAdmin_proxy" href="#" >loading</a></td>
