added transmission, overall improvements in code

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -32,30 +32,35 @@
                     </div>
                     <div class="panel-body">
                         <div class="row">
+                            <!-- OMPD -->
                             <div class="col-md-3">
                                 <a id="OMPD_quicklink" href="#">
                                     <img src="./img/music.png" alt="OMPD" class="img-responsive">
                                     <p class="text-center" >Music</p>
                                 </a>
                             </div>
+                            <!-- Ubooquity -->
                             <div class="col-md-3">
                                 <a id="Ubooquity_quicklink" href="#">
                                     <img src="./img/books.png" alt="Ubooquity" class="img-responsive">
                                     <p class="text-center" >Books</p>
                                 </a>
                             </div>
+                            <!-- Photos -->
                             <div class="col-md-3">
                                 <a id="Photos_quicklink" href="#">
                                     <img src="./img/photos.png" alt="Photos" class="img-responsive">
                                     <p class="text-center" >Photos</p>
                                 </a>
                             </div>
+                            <!-- ownCloud -->
                             <div class="col-md-3">
                                 <a id="ownCloud_quicklink" href="#">
                                     <img src="./img/cloud-backup.png" alt="ownCloud" class="img-responsive">
                                     <p class="text-center" >Backup</p>
                                 </a>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -79,6 +84,7 @@
                             <div class="col-md-12">
                                 <div class="table-responsive">
                                     <table class="table table-striped table-bordered table-hover">
+
                                         <thead>
                                             <tr>
                                                 <th>Service</th>
@@ -88,6 +94,7 @@
                                                 <th>Status</th>
                                             </tr>
                                         </thead>
+
                                         <tbody>
                                                 <!-- this is where the USER services will be listed -->
                                             <tr>
@@ -101,7 +108,6 @@
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
-                                            <tr>
                                                 <td><a id="Ubooquity_site" href="#"><img id="Ubooquity_icon" src=""/></a>
                                                 <a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
                                                 <td>Book Shelf</td>
@@ -242,6 +248,15 @@
                                                 <td id="phpMyAdmin_path" >loading</td>
                                                 <td><a id="phpMyAdmin_proxy" href="#" >loading</a></td>
                                                 <td><span id="phpMyAdmin_status" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Transmission -->
+                                                <td><a id="Transmission_site" href="#"><img id="Transmission_icon" src=""/></a>
+                                                <a id="Transmission_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Torrent Client</td>
+                                                <td id="Transmission_path" >loading</td>
+                                                <td><a id="Transmission_proxy" href="#" >loading</a></td>
+                                                <td><span id="Transmission_status" class="label label-warning">Waiting</span></td>
                                             </tr>
                                         </tbody>
                                     </table>
