added cpu/ram tab usage to header

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -16,6 +16,12 @@
                 <div class="page-header">
                     <img src="./favicon.ico" width="35px" class="pull-left img-responsive">
                     <h1>SurServer <small>Service Control Dashboard</small></h1>
+                    <!-- should float to the right -->
+                    <div class="pull-right">
+                        <small>Load:</small>
+                        <small id="cpu_usage" class="label label-default">loading</small>
+                        <small id="ram_usage" class="label label-default">loading</small>
+                    </div>
                 </div>
             </div>
         </div>
