remove quicklinks on phone

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="Access-Control-Allow-Origin" content="*">
         <title>Home - Dashboard</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./index.css" type="text/css">
     </head>
 <body>
     <!-- header -->
@@ -29,7 +30,7 @@
     <!-- end of header -->
 
     <!-- quick links menu -->
-    <div class="container">
+    <div id="Quicklinks" class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-default">
@@ -88,7 +89,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="table-responsive">
+                                <div class="table-responsive pagination-sm">
                                     <table class="table table-striped table-bordered table-hover">
 
                                         <thead>
@@ -161,7 +162,7 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-12">
-                                <div class="table-responsive">
+                                <div class="table-responsive pagination-sm">
                                     <table class="table table-striped table-bordered table-hover">
                                         <thead>
                                             <tr>
