--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -35,6 +35,9 @@
                         <nav class="menu-items">
                             <ul>
                                 <li>
+                                    <a href="/portfolio">Portfolio</a>
+                                </li>
+                                <li>
                                     <a id="cv" target="_blank">texts changed in scripts.js (Curriculum)</a>
                                 </li>
                                 <li>
@@ -122,33 +125,31 @@
 
         <!-- cards container -->
         <main class="container">
-
-            <!-- card 0 (no links) GRAPH -->
+            <!-- card 0 (no links) GRAPH [LEFT]-->
             <div class="card-container">
-                    <div class="card-0 card-all">
-                        <div class="card-iframe">
-                            <div>
-                                <iframe id="iFrame" loading="lazy" src="api/api.html?surtarso" scrolling="no"></iframe>
-                            </div>
+                <div class="card-0 card-all">
+                    <div class="card-iframe">
+                        <div>
+                            <iframe id="iFrame" loading="lazy" src="api/api.html?surtarso" scrolling="no"></iframe>
                         </div>
                     </div>
-                </a>
-                <div id="card-0" class="card-text">texts changed in scripts.js</div>
+                </div>
+            </a>
+            <div id="card-0" class="card-text">texts changed in scripts.js</div>
             </div>
-
-            <!-- card 1 GITHUB -->
+            <!-- card 5 PORTFOLIO [RIGHT] -->
             <div class="card-container">
-                <div id="card-1" class="card-text">texts changed in scripts.js</div>
-                <a class="links" href="https://github.com/surtarso" target="_blank">
-                    <div class="card-1 card-all">
+                <div id="card-5" class="card-text">texts changed in scripts.js</div>
+                <a class="links" href="/portfolio" target="_blank">
+                    <div class="card-5 card-all">
                         <div class="card-wrapper">
-                            <lottie-player class="card-icon" src="img/cards/github.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                            <lottie-player class="card-icon" src="img/cards/portfolio.json" background="transparent" speed="1" loop autoplay></lottie-player>
                         </div>
                     </div>
                 </a>
             </div>
 
-            <!-- card 2 LINKEDIN -->
+            <!-- card 2 LINKEDIN [LEFT]-->
             <div class="card-container">
                 <a class="links" href="https://www.linkedin.com/in/tarsogalvao" target="_blank">
                     <div class="card-2 card-all">
@@ -160,7 +161,31 @@
                 <div id="card-2" class="card-text">texts changed in scripts.js</div>
             </div>
 
-            <!-- card 3 URCADE -->
+            <!-- card 1 GITHUB [RIGHT]-->
+            <div class="card-container">
+                <div id="card-1" class="card-text">texts changed in scripts.js</div>
+                <a class="links" href="https://github.com/surtarso" target="_blank">
+                    <div class="card-1 card-all">
+                        <div class="card-wrapper">
+                            <lottie-player class="card-icon" src="img/cards/github.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                        </div>
+                    </div>
+                </a>
+            </div>
+
+            <!-- card 4 PLAYGROUND [LEFT]-->
+            <div class="card-container">
+                <a class="links" href="https://tarsogalvao.ddns.net/games">
+                    <div class="card-4 card-all">
+                        <div class="card-wrapper">
+                            <lottie-player class="card-icon" src="img/cards/playground.json" background="transparent" speed="1" loop autoplay></lottie-player>
+                        </div>
+                    </div>
+                </a>
+                <div id="card-4" class="card-text">texts changed in scripts.js</div>
+            </div>
+
+            <!-- card 3 URCADE [RIGHT]-->
             <div class="card-container">
                 <div id="card-3" class="card-text">texts changed in scripts.js</div>
                 <a class="links" href="https://solidserverbr.ddns.net/urcade/" target="_blank">
@@ -172,17 +197,7 @@
                 </a>
             </div>
 
-            <!-- card 4 PLAYGROUND -->
-            <div class="card-container">
-                <a class="links" href="https://tarsogalvao.ddns.net/games">
-                    <div class="card-4 card-all">
-                        <div class="card-wrapper">
-                            <lottie-player class="card-icon" src="img/cards/playground.json" background="transparent" speed="1" loop autoplay></lottie-player>
-                        </div>
-                    </div>
-                </a>
-                <div id="card-4" class="card-text">texts changed in scripts.js</div>
-            </div>
+            
 
         <!-- pre-footer (messages) wrapper-->
         <div class="msgbox-wrapper">
