added portfolio menu and card

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- end of header -->
 
     <!-- quick links menu -->
@@ -140,7 +140,16 @@
                                                 <td><a id="Wordpress_proxy" href="#" >loading</a></td>
                                                 <td><span id="Wordpress_status" class="label label-warning">Waiting</span></td>
                                             </tr>
-                                            
+                                            <tr>
+                                                <!-- Mario -->
+                                                <td><a id="Mario_site" href="#"><img id="Mario_icon" src=""/></a>
+                                                <a id="Mario_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Mario</td>
+                                                <td id="Mario_path" >loading</td>
+                                                <td><a id="Mario_proxy" href="#" >loading</a></td>
+                                                <td><span id="Mario_status" class="label label-warning">Waiting</span></td>
+                                            </tr>
+
                                         </tbody>
                                     </table>
                                 </div>
