removed urcade from main page

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -186,7 +186,7 @@
             </div>
 
             <!-- card 3 URCADE [RIGHT]-->
-            <div class="card-container">
+            <!-- <div class="card-container">
                 <div id="card-3" class="card-text">texts changed in scripts.js</div>
                 <a class="links" href="https://solidserverbr.ddns.net/urcade/" target="_blank">
                     <div class="card-3 card-all">
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+            </div> -->
 
             
 
