replaced some icons, added target black to folio

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -35,7 +35,7 @@
                         <nav class="menu-items">
                             <ul>
                                 <li>
-                                    <a href="/portfolio">Portfolio</a>
+                                    <a href="/portfolio" target="_blank">Portfolio</a>
                                 </li>
                                 <li>
                                     <a id="cv" target="_blank">texts changed in scripts.js (Curriculum)</a>
