changed my picture

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -59,7 +59,7 @@
             </div>
 
             <!-- Header main image + name text-->           
-            <video muted autoplay playsinline loop class="header-image" width="267px" height="320px" src="img/me.webm" type="video/webm" type="video/webm; codecs='vp9, opus'" preload="auto"></video>
+            <img class="header-image" width="267px" height="320px" src="img/me.png" type="image/png" />
             <h1>Tarso Galvão</h1>
             <!-- job description -->
             <h3 id="ht">texts changed in scripts.js</h3>
@@ -233,6 +233,6 @@
         <!-- cards animated figures (json player)-->
         <script defer type="text/javascript" src="src/js/lottie-player.js" nonce="rAnd0m123"></script>
         <!-- canvas -->
-        <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script>
+        <!-- <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script> -->
     </body>
 </html>
